Change sleep method to waiters